Kubernetes/Labs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: demo-ingress
  namespace: demo-ns

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-svc
            port:
              number: 82
      - pathType: Prefix
        path: /app
        backend:
          service:
            name: app-svc
            port:
              number: 80
